<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travail_nom_label" />

    <EditText
        android:id="@+id/travail_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/travail_nom_hint"
        android:inputType="text" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travail_details_label" />

    <Button
        android:id="@+id/travail_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/travail_termine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travail_termine_label" />
    <Button
        android:id="@+id/travail_coequipier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travail_ajouter_coequipier" />
    <Button
        android:id="@+id/travail_contacter_coequipier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travail_contacter_coequipier" />

    <ImageView
        android:id="@+id/travail_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/black"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:layout_gravity="center_horizontal" />
    <ImageButton
        android:id="@+id/travail_Camera"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/baseline_photo_camera_24" />
</LinearLayout>
